# oslib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: target.cmake
include/: os.cppm
include/argp/: argp.cppm  argp.h
include/cmd/: TODO.md  cmd.cppm  cmd.h
include/common/: Result.hpp
include/common/argp/: argp.h
include/common/cmd/: TODO.md  cmd.h
include/log/: log.cppm  log.h
include/windows/cmd/: cmd.h
src/common/argp/: CMakeLists.txt  argp.cpp
src/common/cmd/: CMakeLists.txt  cmd.cpp
src/common/log/: CMakeLists.txt  log.cpp
src/linux/cmd/: cmd.cpp
src/unix/cmd/: cmd.cpp
src/windows/cmd/: cmd.cpp
test/: CMakeLists.txt
test/argp/: main.cpp
test/cmd/: main.cpp
test/log/: main.cpp
